<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <SearchView
        android:id="@+id/search_view"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search_here"
        android:queryBackground="@null"
        android:layout_marginHorizontal="30dp"
        android:searchIcon="@null"
        android:background="@drawable/search_background"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:textSize="22sp"
        android:text="@string/just_For_you"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="153dp"
        android:layout_marginTop="19dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp">


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"/>

    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/Recipes"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="21dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginHorizontal="30dp"
            android:text="@string/food_category"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_category_recycle_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_food_category"/>

    </LinearLayout>

